--- a/004 - Product preview card/index.html
+++ b/004 - Product preview card/index.html
@@ -38,9 +38,11 @@
 
   </div>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/jullyanabrasileiro/">Jullyana Brasileiro</a>.
-  </div>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://github.com/jullyanabrasileiro/">Jullyana Brasileiro</a>.
+    </div>
+  </footer>
 </body>
 </html>
