--- a/006 - Base Apparel coming soon page/index.html
+++ b/006 - Base Apparel coming soon page/index.html
@@ -8,22 +8,19 @@
   
   <title>Frontend Mentor | Base Apparel coming soon page</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <div class="container">
     <div class="left">
-      <img src="images/logo.svg" alt="logo">
-      <h1><span>We're</span> coming soon</h1>
+      <img class="logo" src="images/logo.svg" alt="logo">
+      <h1><span>We're</span> <br>coming</br> soon</h1>
       <p>
         Hello fellow shoppers! We're currently building our new fashion store.
         Add your email below to stay up-to-date with announcements and our launch deals.
       </p>
+      
       <form>
         <input type="email" placeholder="Email Adress">Email Address</input>
         <img class="error-icon" src="images/icon-error.svg" alt="error">
