--- a/006 - Base Apparel coming soon page/index.html
+++ b/006 - Base Apparel coming soon page/index.html
@@ -11,28 +11,44 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+		<div class="container">
+			<div class="left">
+				<div class="inner-container">
+					<img class="logo" src="./images/logo.svg" alt="logo" />
 
-  <div class="container">
-    <div class="left">
-      <img class="logo" src="images/logo.svg" alt="logo">
-      <h1><span>We're</span> <br>coming</br> soon</h1>
-      <p>
-        Hello fellow shoppers! We're currently building our new fashion store.
-        Add your email below to stay up-to-date with announcements and our launch deals.
-      </p>
-      
-      <form>
-        <input type="email" placeholder="Email Adress">Email Address</input>
-        <img class="error-icon" src="images/icon-error.svg" alt="error">
-        <button><img src="images/icon-arrow.svg" alt="arrow"></button>
-        <small>Please provide a valid email</small>
-      </form>
-    </div>
+					<img
+						class="bg-mobile"
+						src="./images/hero-mobile.jpg"
+						alt="background mobile"
+					/>
+					<h1>
+						<span>We're</span>
+						<br />
+						coming
+						<br />
+						soon
+					</h1>
 
-    <div class="right bg-image">
-      <img src="images/hero-desktop.jpg" alt="">
-    </div>
-  </div>
+					<p>
+						Hello fellow shoppers! We're currently building our new fashion
+						store. Add your email below to stay up-to-date with announcements
+						and our launch deals.
+					</p>
+
+					<form id="form">
+						<input id="email" type="email" placeholder="Email Address" />
+						<img class="error-icon" src="./images/icon-error.svg" alt="error" />
+						<button>
+							<img src="./images/icon-arrow.svg" alt="arrow" />
+						</button>
+						<small>Please provide a valid email</small>
+					</form>
+				</div>
+			</div>
+
+			<div class="right bg-image"></div>
+		</div>
+
   
   <footer>
     <div class="attribution">
@@ -40,6 +56,8 @@
       Coded by <a href="https://github.com/jullyanabrasileiro/">Jullyana Brasileiro</a>.
     </div>
   </footer>
+
+  <script src="script.js"></script>
 
 </body>
 </html>
