--- a/010 - Interactive rating component/index.html
+++ b/010 - Interactive rating component/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-  <main>
+  <div class="container">
     <!-- Rating state start -->
     <div class="rating">
       <img src="images/icon-star.svg" alt="star">
@@ -34,7 +34,7 @@
       don’t hesitate to get in touch!
     </div>
     <!-- Thank you state end -->
-  </main>
+  </div>
 
   <footer>
     <div class="attribution">
