--- a/010 - Interactive rating component/index.html
+++ b/010 - Interactive rating component/index.html
@@ -10,28 +10,38 @@
 
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
+<body>
+  
   <div class="container">
     <!-- Rating state start -->
     <div class="rating">
-      <img src="images/icon-star.svg" alt="star">
+      <div class="star"><img src="images/icon-star.svg" alt="star"></div>
       <h1>How did we do?</h1>
       <p>
         Please let us know how we did with your support request. All feedback is appreciated
         to help us improve our offering!
       </p>
-      <div class="numenbers">1 2 3 4 5</div>
+      <div class="numbers">
+        <data class="number-circle" value="1">1</data>
+        <data class="number-circle" value="2">2</data>
+        <data class="number-circle" value="3">3</data>
+        <data class="number-circle" value="4">4</data>
+        <data class="number-circle" value="5">5</data>
+      </div>
       <button>Submit</button>
     </div>
     <!-- Rating state end -->
 
     <!-- Thank you state start -->
     <div class="thank-you">
-      You selected <!-- Add rating here --> out of 5
-      Thank you!
-      We appreciate you taking the time to give a rating. If you ever need more support,
-      don’t hesitate to get in touch!
+      <div><img src="images/illustration-thank-you.svg" alt=""></div>
+      <div class="selection">You selected <!-- Add rating here --> out of 5</div>
+      <h1>Thank you!</h1>
+      <p>
+        We appreciate you taking the time to give a rating. If you ever need more support,
+        don’t hesitate to get in touch!
+      </p>
     </div>
     <!-- Thank you state end -->
   </div>
