--- a/010 - Interactive rating component/index.html
+++ b/010 - Interactive rating component/index.html
@@ -12,10 +12,10 @@
 </head>
 
 <body>
-  
+
   <div class="container">
     <!-- Rating state start -->
-    <div class="rating">
+    <div class="rating hidden">
       <div class="star"><img src="images/icon-star.svg" alt="star"></div>
       <h1>How did we do?</h1>
       <p>
@@ -35,7 +35,7 @@
 
     <!-- Thank you state start -->
     <div class="thank-you">
-      <div><img src="images/illustration-thank-you.svg" alt=""></div>
+      <img src="images/illustration-thank-you.svg" alt="">
       <div class="selection">You selected <!-- Add rating here --> out of 5</div>
       <h1>Thank you!</h1>
       <p>
