--- a/011 - Stats preview card component/index.html
+++ b/011 - Stats preview card component/index.html
@@ -12,20 +12,22 @@
 
 <body>
 
-  <container>
-    <div><img src="images/image-header-desktop.jpg" alt=""></div>
+  <div class="container">
+    <div class="header-img"><img src="images/image-header-desktop.jpg" alt=""></div>
 
     <main>
-      <h1>Get insights that help your business grow.</h1>
+      <h1>Get <span class="span-title">insights</span> that help your business grow.</h1>
       <p>
         Discover the benefits of data analytics and make better decisions regarding revenue, customer
         experience, and overall efficiency.
       </p>
-      10k+ companies
-      314 templates
-      12m+ queries
+      <div class="numbers">
+        <div class="companies"><span class="span-numbers">10k+</span> companies</div>
+        <div class="templates"><span class="span-numbers">314</span> templates</div>
+        <div class="queries"><span class="span-numbers">12m+</span> queries</div>
+      </div>
     </main>
-  </container>
+  </div>
 
   <footer>
     <div class="attribution">
