--- a/011 - Stats preview card component/index.html
+++ b/011 - Stats preview card component/index.html
@@ -13,20 +13,22 @@
 <body>
 
   <div class="container">
-    <div class="header-img"><img src="images/image-header-desktop.jpg" alt=""></div>
-
-    <main>
-      <h1>Get <span class="span-title">insights</span> that help your business grow.</h1>
-      <p>
-        Discover the benefits of data analytics and make better decisions regarding revenue, customer
-        experience, and overall efficiency.
-      </p>
-      <div class="numbers">
-        <div class="companies"><span class="span-numbers">10k+</span> companies</div>
-        <div class="templates"><span class="span-numbers">314</span> templates</div>
-        <div class="queries"><span class="span-numbers">12m+</span> queries</div>
+    <div class="main">
+      <div class="text">
+        <h1>Get <span class="span-title">insights</span> that help your business grow.</h1>
+        <p>
+          Discover the benefits of data analytics and make better decisions regarding revenue, customer
+          experience, and overall efficiency.
+        </p>
+        <div class="stats">
+          <div class="companies"><div class="big-numbers">10k+</div> <div class="description">companies</div></div>
+          <div class="templates"><div class="big-numbers">314</div> <div class="description">templates</div></div>
+          <div class="queries"><div class="big-numbers">12m+</div> <div class="description">queries</div></div>
+        </div>
       </div>
-    </main>
+    </div>
+
+    <div class="header-img"><img src="images/image-header-desktop.jpg" alt=""></div>
   </div>
 
   <footer>
