--- a/011 - Stats preview card component/index.html
+++ b/011 - Stats preview card component/index.html
@@ -26,9 +26,8 @@
           <div class="queries"><div class="big-numbers">12m+</div> <div class="description">queries</div></div>
         </div>
       </div>
+      <div class="img"></div>
     </div>
-
-    <div class="header-img"><img src="images/image-header-desktop.jpg" alt=""></div>
   </div>
 
   <footer>
