--- a/011 - Stats preview card component/index.html
+++ b/011 - Stats preview card component/index.html
@@ -26,7 +26,7 @@
           <div class="queries"><div class="big-numbers">12m+</div> <div class="description">queries</div></div>
         </div>
       </div>
-      <div class="img"></div>
+      <div class="img"><img src="images/image-header-desktop.jpg" alt="Imagem header people talinkg"></div>
     </div>
   </div>
 
